--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Python application with CD
+name: Python application
 
 on:
   push:
@@ -22,10 +22,3 @@ jobs:
     - name: Run tests
       run: |
         python -m unittest test_calculadora.py
-    - name: Package project
-      run: zip -r calculadora.zip .
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: calculadora-artifact
-        path: calculadora.zip
